# Koreainside

./: .gitignore  .vercelignore  AGENTS.md  PROJECT.md  README.md  accommodation.html  affiliate-tracking.js  airport-bus.html  airport-transfer.html  airport.html  apps.html  arex.html  arrival.css  arrival.html  best-area-for-budget-travelers-seoul.html  best-area-for-couples-seoul.html  best-area-for-families-seoul.html  best-area-for-first-time-visitors-seoul.html  best-area-for-luxury-hotels-seoul.html  best-area-for-nightlife-seoul.html  best-area-for-shopping-seoul.html  best-area-for-solo-travelers-seoul.html  checklist.html  codex-report.md  common.js  esim.html  hongdae-vs-myeongdong.html  index.html  k-beauty.css  k-beauty.html  kii-dashboard.html  maps.html  package.json  payments.html  rental-car.html  robots.txt  sitemap.xml  stay-guide.html  style.css  taste-korea.html  (+4 more)
korea-inside-admin/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
korea-inside-admin/src-tauri/capabilities/: default.json
korea-inside-admin/src-tauri/permissions/autogenerated/: delete_search_console_client_id.toml  delete_vercel_access_token.toml  disconnect_repository.toml  disconnect_search_console.toml  export_repository_inventory.toml  get_search_console_client_status.toml  get_search_console_summary.toml  get_search_console_top_countries.toml  get_search_console_top_pages.toml  get_search_console_top_queries.toml  select_repository.toml  (+11 more)
korea-inside-admin/src-tauri/src/: analytics.rs  credentials.rs  export.rs  lib.rs  main.rs  repository.rs  search_console.rs  site_status.rs
(+88 files in other folders)
